[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "config_overrider_databricks_keyvault"
author = "jtviegas"
author-email = "jtviegas.js@gmail.com"
home-page = "https://github.com/jtviegas/configuration-overrider-databricks-keyvault"
classifiers = [
    "Programming Language :: Python :: 3.7",
]
requires-python = ">=3.7"
requires = [
    "attrs==20.2.0",
    "certifi==2020.6.20",
    "chardet==3.0.4",
    "docutils==0.16",
    "idna==2.10",
    "importlib-metadata==2.0.0",
    "iniconfig==1.1.1",
    "packaging==20.4",
    "pluggy==0.13.1",
    "py==1.9.0",
    "pytest==6.1.2",
    "pytoml==0.1.21",
    "requests==2.24.0",
    "setuptools==50.3.2",
    "six==1.15.0",
    "toml==0.10.2",
    "urllib3==1.25.11",
    "wheel==0.35.1",
    "zipp==3.4.0",
    "configuration-overrider",
]