[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "config_overrider_databricks_keyvault"
dist-name = "configuration-overrider-databricks-keyvault"
author = "jtviegas"
author-email = "jtviegas.js@gmail.com"
home-page = "https://github.com/jtviegas/configuration-overrider-databricks-keyvault"
classifiers = [
    "Programming Language :: Python :: 3.7",
]
requires-python = ">=3.7"
requires = [
    "configuration-overrider==0.0.1",
]